Bug 135879 - can not unprotect bookmarks
Summary: can not unprotect bookmarks
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.0.0.3 release
Hardware: x86-64 (AMD64) All
: medium normal
Assignee: Michael Stahl
URL:
Whiteboard: target:7.1.0 target:7.0.2
Keywords: bibisected, bisected, needUITest, regression
: 136960 137969 (view as bug list)
Depends on:
Blocks: Bookmarks
  Show dependency treegraph
 
Reported: 2020-08-18 12:12 UTC by Sciuriware
Modified: 2020-11-04 15:15 UTC (History)
7 users (show)

See Also:
Crash report or crash signature:


Attachments
test file (8.29 KB, application/vnd.oasis.opendocument.text)
2020-09-06 15:06 UTC, raal
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Sciuriware 2020-08-18 12:12:57 UTC
Suddenly it occurred to me that the DELETE button in the bookmarks
dialog is greyed out. So it seems that the bookmarks I created
mysteriously have been protected (I didn't).
I can not find a way to remove that protection, so my document
gets polluted with obsolete bookmarks.
;JOOP!
Comment 1 Sciuriware 2020-08-18 12:23:54 UTC
... just moved to my wife's iMac running LibreOffice 6.4.5.2
There my documents bookmarks showed NOT protected,
so I could easily delete the unwanted bookmarks there.

... It's a bug in 7.
;JOOP!
Comment 2 Dieter 2020-08-19 14:50:33 UTC
I confirm it with

Version: 7.0.0.3 (x64)
Build ID: 8061b3e9204bef6b321a21033174034a5e2ea88e
CPU threads: 4; OS: Windows 10.0 Build 19041; UI render: Skia/Raster; VCL: win
Locale: de-DE (de_DE); UI: en-GB
Calc: threaded

Steps to reproduce
1. Add some booksmarks in a text
2. Open navigator in sidebar
3. Select bookmark => context menu => edit bookmark

Result: Delete button is greyed out
Comment 3 raal 2020-09-06 15:05:35 UTC
This seems to have begun at the below commit.
Adding Cc: to Katarina Behrens  ; Could you possibly take a look at this one?
Thanks
 62d27ef7c06dd68b34d0247b1145bad4ddc188a0 is the first bad commit
commit 62d27ef7c06dd68b34d0247b1145bad4ddc188a0
Author: Jenkins Build User <tdf@pollux.tdf>
Date:   Mon Feb 3 23:56:26 2020 +0100

    source cb5d18871b46ef4f7bc47eb4d71df5374d712575

author	Katarina Behrens <Katarina.Behrens@cib.de>	2020-01-24 18:40:24 +0100
committer	Michael Stahl <michael.stahl@cib.de>	2020-02-03 13:13:21 +0100
commit cb5d18871b46ef4f7bc47eb4d71df5374d712575 (patch)
tree 8ea494866e1761716dcdeed6eab981ebf535ecff
parent 56a89f475570d6937e8e2b9d00a72a19c2dd7665 (diff)
sw: Optionally disable bookmark manipulation GUIs
If the ProtectBookmarks bit is set, don't allow bookmark
changes, neither via the bookmark dialog nor the navigator.

Tools> Protect document > Protect bookmarks is not checked.
Comment 4 raal 2020-09-06 15:06:06 UTC
Created attachment 165200 [details]
test file
Comment 5 Sciuriware 2020-09-07 15:04:19 UTC
The same situation for 7.0.1
;JOOP!
Comment 6 Sciuriware 2020-09-07 15:05:57 UTC
A temporary solution for the problem:
to get rid of a bookmark, delete the item involved, then restore it by hand.
;JOOP!
Comment 7 Commit Notification 2020-09-21 08:47:21 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/fefcad1186232b26180d095bbafdf8e8bdda8209

tdf#135879 sw: fix bookmark dialog's Delete button

It will be available in 7.1.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Michael Stahl 2020-09-21 08:59:28 UTC
fixed on master
Comment 9 Sciuriware 2020-09-21 09:19:46 UTC
That's fast! Thanks.
;JOOP!
Comment 10 Commit Notification 2020-09-21 11:12:21 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-7-0":

https://git.libreoffice.org/core/commit/88084ceca708a343fc79249f91eb9de34d26b3e9

tdf#135879 sw: fix bookmark dialog's Delete button

It will be available in 7.0.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 Commit Notification 2020-09-23 06:39:56 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-7-0-2":

https://git.libreoffice.org/core/commit/6b9733e14ada8e07822f17bea32f399e1b9964c5

tdf#135879 sw: fix bookmark dialog's Delete button

It will be available in 7.0.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 12 rpr 2020-09-24 21:03:53 UTC
*** Bug 136960 has been marked as a duplicate of this bug. ***
Comment 13 Xisco Faulí 2020-09-29 12:39:48 UTC
Verified in

Version: 7.1.0.0.alpha0+
Build ID: cd85546a2fbdade42f80fd3b6bd650791db9f32d
CPU threads: 4; OS: Linux 5.7; UI render: default; VCL: gtk3
Locale: tr-TR (en_US.UTF-8); UI: en-US
Calc: threaded

@Michael Stahl, thanks for fixing this issue!
Comment 14 Sciuriware 2020-10-09 08:53:52 UTC
Verified in 7.0.2.2, Build  8349ace3c3162073abd90d81fd06dcfb6b36b994
;JOOP!
Comment 15 Xisco Faulí 2020-11-04 15:15:17 UTC
*** Bug 137969 has been marked as a duplicate of this bug. ***