tdf#135879 sw: fix bookmark dialog's Delete button

(regression from cb5d18871b46ef4f7bc47eb4d71df5374d712575)

Change-Id: Ic8c66504a760ef26fbf95a5a1a13b37346982024
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/103015
Tested-by: Jenkins
Reviewed-by: Michael Stahl <michael.stahl@cib.de>